# hyperbolic-wythoff

./: .gitignore  LICENSE  README.md  pyproject.toml
hypw/: color.py  design.py  geometry.py  hypw.py  mirror.py  setting.py  typing.py
tests/: test_hypw.py
