[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
backend-path = "."

[project]
name = "hypwyth"
version = "0.0.1"
description = "hyperbolic wythoff construction"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["hyperbolic", "wythoff", "tilling", "tessellation"]
authors = [
  {email = "mingli.yuan@gmail.com"},
  {name = "Mingli Yuan"}
]
maintainers = [
  {name = "Mingli Yuan", email = "mingli.yuan@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization"
]

dependencies = [
  "numpy",
  "Pillow",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.urls]
homepage = "https://github.com/mountain/hyperbolic-wythoff"
documentation = "https://github.com/mountain/hyperbolic-wythoff"
repository = "https://github.com/mountain/hyperbolic-wythoff"

[project.scripts]
hypw = "hypw.hypw:main_cli"

[tool.mypy]
python_version = "3.9"
